--- a/hioldsstarter.csproj
+++ b/hioldsstarter.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="src\AssemblyInfo.cs" />
     <Compile Include="src\API.cs" />
+    <Compile Include="src\HioldTestConsole.cs" />
     <Compile Include="src\HttpTools.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
